src/components/storyblok/PageHome/PageHome.module.sass
.pageHome
  position: relative
  width: 100%
  display: flex
  flex-direction: column

.topScrollWrapper
  position: relative
  display: flex
  flex-direction: column
  width: 100%
  height: 100vh
  height: 100dvh

.middleBlokAnimation
  position: absolute
  left: 50%
  bottom: 1rem
  transform: translateX(-50%)
  width: 49.5vmin
  height: 66vmin
  transition: background-color var(--transition-theme)
  &[data-theme="dark"]
    background-color: var(--theme-dark-bg-page)
  &[data-theme="light"]
    background-color: var(--theme-light-bg-page)

.theSliderWrapper
  position: relative
  width: 100%
  flex-grow: 1

.entryText
  position: absolute
  top: 50%
  right: 10vw
  transform: translateY(-50%)
  font-family: var(--maru-font)
  font-weight: 500
  text-transform: uppercase
  color: inherit
  cursor: pointer
  transition: opacity 0.66s ease-in
  &[data-active="true"]
    opacity: 1
  &[data-active="false"]
    opacity: 0

